@@ -1,9 +1,7 @@
 package stincmale.sandbox.benchmarks.util;
 
 import static java.lang.Boolean.parseBoolean;
-import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collection;
 import java.util.function.Consumer;
 import java.util.stream.Stream;
 import javax.annotation.Nullable;
@@ -11,29 +9,29 @@ import org.openjdk.jmh.runner.options.OptionsBuilder;
 import static org.openjdk.jmh.runner.options.TimeValue.milliseconds;
 
 public final class JmhOptions {
-  private static final boolean DRY_RUN = parseBoolean(System.getProperty("stincmale.sandbox.benchmarks.dryRun", "false"));
-  private static final boolean JAVA_SERVER = true;
-  private static final boolean JAVA_ENABLE_ASSERTIONS = DRY_RUN;
+  private static final boolean dryRun = parseBoolean(System.getProperty("sandbox.dryRun", "false"));
+  private static final boolean javaServer = !dryRun;
+  private static final boolean javaEnableAssertions = dryRun;
 
   private JmhOptions() {
   }
 
   public static final OptionsBuilder newOptionsBuilder(@Nullable final Consumer<OptionsBuilder> forksWarmupIterationsTuner) {
     final OptionsBuilder result = new OptionsBuilder();
-    final Collection<String> jvmArgs = new ArrayList<>();
-    jvmArgs.add("-Xfuture");
-    jvmArgs.add("-Xshare:off");
-    jvmArgs.add("-Xms4096m");
-    jvmArgs.add("-Xmx4096m");
-    jvmArgs.add(JAVA_SERVER ? "-server" : "-client");
-    jvmArgs.add(JAVA_ENABLE_ASSERTIONS ? "-enableassertions" : "-disableassertions");
-    result.jvmArgs(jvmArgs.toArray(new String[0]))
+    result.jvmArgs(
+        "-Xfuture",
+        "--illegal-access=deny",
+        "-Xshare:off",
+        "-Xms4096m",
+        "-Xmx4096m",
+        javaServer ? "-server" : "-client",
+        javaEnableAssertions ? "-enableassertions" : "-disableassertions")
         .shouldDoGC(false)
         .syncIterations(true)
         .shouldFailOnError(true)
         .threads(1)
         .timeout(milliseconds(1000_000));
-    if (DRY_RUN) {
+    if (dryRun) {
       result.forks(1)
           .warmupTime(milliseconds(50))
           .warmupIterations(1)
@@ -45,8 +43,12 @@ public final class JmhOptions {
     return result;
   }
 
-  public static final String includeClass(final Class<?> klass) {
+  public static final String includeBenchmarks(final Class<?> klass) {
     return klass.getName() + ".*";
+  }
+
+  public static final String includeBenchmarks(final Class<?> klass, final String benchmarkRegexp) {
+    return klass.getName() + benchmarkRegexp;
   }
 
   public static final String[] jvmArgsDisableGc() {
@@ -57,6 +59,14 @@ public final class JmhOptions {
     return new String[] {"-XX:-UseBiasedLocking"};
   }
 
+  /**
+   * Example:
+   * <pre>{@code
+   *  new OptionsBuilder().jvmArgsAppend(concat(
+   *    jvmArgsDisableGc(),
+   *    jvmArgsDisableBiasedLocking()));
+   * }</pre>
+   */
   public static final String[] concat(final String[]... arrays) {
     return Stream.of(arrays)
         .flatMap(Arrays::stream)
